<resources>
    <string name="app_name">NRCompression</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NRCompression</string>
    <string name="nav_header_subtitle">Tricks Today</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Recent Item</string>
    <string name="menu_tools">Visit Site</string>
    <string name="menu_share">Share</string>
    <string name="menu_techSupp">Tech Support</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
