<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.newraah.mysecondapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.newraah.mysecondapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.newraah.mysecondapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.newraah.mysecondapp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.newraah.mysecondapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/nav_techsupp"
        android:name="com.newraah.mysecondapp.ui.techSuppo.techSupp"
        android:label="@string/menu_techSupp"
        tools:layout="@layout/activity_main" />


</navigation>